# Add

./: .railwayignore  .replit  nixpacks.toml  pnpm-lock.yaml  pyproject.toml  railway.toml  replit.md
artifacts/telegram-adder/: index.html  package.json
artifacts/telegram-adder/.replit-artifact/: artifact.toml
scripts/: post-merge.sh
telegram-adder/: app.py  git_sync_daemon.sh  push_to_github.sh  requirements.txt
telegram-adder/core/: account_warmer.py  adder.py  auth.py  captcha_handler.py  database.py  device_spoofer.py  human_behavior.py  scraper.py  session_manager.py  spambot_handler.py
telegram-adder/pages/: 1_Accounts.py  2_Proxies.py  3_Scraper.py  4_Adder.py  5_Warming.py  6_Logs.py  7_AntiSpam.py  8_Settings.py
