[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncio-throttle>=1.0.2",
    "faker>=40.21.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.12",
    "pysocks>=1.7.1",
    "python-socks>=2.8.1",
    "streamlit>=1.58.0",
    "telethon>=1.43.2",
]
